# needybot-choreography

./: CMakeLists.txt  README.md  package.xml  setup.py
src/needybot_choreography/: animator.py
test/: choreography.test
test/src/: test_animator.py
